--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -101,6 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:lineSpacingMultiplier="1.2"
                     android:textColor="@color/primary_text_dark"
                     android:textSize="@dimen/body"
                     tools:text="隐退" />
