--- a/app/src/main/res/layout/news_app_widget.xml
+++ b/app/src/main/res/layout/news_app_widget.xml
@@ -24,6 +24,7 @@
         <ImageView
             android:id="@+id/setting"
             android:clickable="true"
+            android:contentDescription="@string/appwidget_setting_description"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:scaleType="centerInside"
