--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -13,7 +13,9 @@
         <item name="android:windowContentTransitions">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
-        //not work
+
+        //default transition framework provider inverse transition
         <!--<item name="android:windowReturnTransition">@transition/news_detail_return</item>-->
+        <item name="android:windowEnterTransition">@transition/news_detail_enter</item>
     </style>
 </resources>
